C/b2/src/main/java/b2_04/PrefixCalculator.g4
grammar PrefixCalculator;
program:
    stat* EOF
    ;
stat:
    expr ? NEWLINE
    ;
expr:
    op=('*'|'/'|'+'|'-') expr expr
    | Number
    ;
Number:
    [0-9]+('.'[0-9]+)?
    ;
NEWLINE:
    '\r'?'\n'
    ;
WS: [ \t]+ -> skip;
